@@ -1,3 +1,9 @@
+2008-02-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem.c: (totem_action_remote), (on_mouse_click_fullscreen):
+	Fix crashers when remote buttons are pressed and we're in
+	windowed mode (Closes: #516089)
+
 2008-02-12  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
